@@ -2,9 +2,9 @@
 appveyor.yml
 Changes
 dev/quote_file_contents.pl
-lib/STEVEB/Dist/Mgr.pm
-lib/STEVEB/Dist/Mgr.pod
-lib/STEVEB/Dist/Mgr/FileData.pm
+lib/Dist/Mgr.pm
+lib/Dist/Mgr.pod
+lib/Dist/Mgr/FileData.pm
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
