@@ -4,10 +4,10 @@ use warnings;
 use ExtUtils::MakeMaker;
 
 WriteMakefile(
-    NAME             => 'STEVEB::Dist::Mgr',
+    NAME             => 'Dist::Mgr',
     AUTHOR           => q{Steve Bertrand <steveb@cpan.org>},
-    VERSION_FROM     => 'lib/STEVEB/Dist/Mgr.pm',
-    ABSTRACT_FROM    => 'lib/STEVEB/Dist/Mgr.pm',
+    VERSION_FROM     => 'lib/Dist/Mgr.pm',
+    ABSTRACT_FROM    => 'lib/Dist/Mgr.pm',
     LICENSE          => 'artistic_2',
     PL_FILES         => {},
     MIN_PERL_VERSION => '5.010',
@@ -20,5 +20,5 @@ WriteMakefile(
     PREREQ_PM => {
     },
     dist  => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
-    clean => { FILES => 'STEVEB-Dist-Mgr-*' },
+    clean => { FILES => 'Dist-Mgr-*' },
 );
